css kitsu overlap fixed

--- a/src/components/KitsuAnimeItem/KitsuAnimeItem.css
+++ b/src/components/KitsuAnimeItem/KitsuAnimeItem.css
@@ -40,6 +40,7 @@
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     overflow-x: hidden;
+    width:11em;
   }
 
   .genre, .rating{
@@ -101,6 +102,7 @@
 
 .genre {
   margin: 4px  10px 4px 10px !important;
+  display: unset;
 }
 
 
